--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
-    "deploy": "nuxt generate && nuxt copy .output/public docs"
+    "deploy": "nuxt generate && xcopy .output\\public docs /E /I /Y"
   },
   "dependencies": {
     "@nuxt/content": "^3.5.1",
